# termint

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: nightly-build.yml  rust.yml
scripts/: install-icons.sh
src/: main.rs
